#+STARTUP:showall

* Changelog

** Next

- Added support for =shr=. See [[https://github.com/mssola/soria/commit/cc225f51ea724d8767f97249d8c6b3fc5182d331][cc225f51ea72]].
- Added support for =diredfl=. See [[https://github.com/mssola/soria/commit/b9a35f891b24380ce57d1468463ffe71e2738204][b9a35f891b24]].
- Fixed background color for =company-mode=.

** 0.4.1

- Added support for =org-ref=. See [[https://github.com/mssola/soria/commit/2a59db06a319500fcb0671f1545433b16309d00a][2a59db06a319]].
- Fixed the =mu4e-ok-face=. See [[https://github.com/mssola/soria/commit/c2236e4a1c6261137e6fde01947075652027f378][c2236e4a1c62]].
- Added support for =tab-line= and =line-number=. See [[https://github.com/mssola/soria/commit/ae1229ac9a7f86fe0ec713f70e64b9cfdec592e3][ae1229ac9a7f]].
- Added support for =gnus=. See [[https://github.com/mssola/soria/commit/5ce622fa1db112ec972c1e74296917e43f2ad151][5ce622fa1db1]].

** 0.4.0

- Added support for =treemacs=. See [[https://github.com/mssola/soria/commit/62d1d61994b4889f8fff16978b7dfa1a047f6832][62d1d61994b4]].
- The =master= branch has been renamed into =main=.

** 0.3.3

- Do not highlight file extensions differently in =helm=. See [[https://github.com/mssola/soria/commit/7335adaa6e23d8aa10d2ca68e9ce2ac7fee8664c][7335adaa6e2]].
- Added support for =markup-faces= (which also include =adoc-mode=). See [[https://github.com/mssola/soria/commit/789f0a3474e6ad6c11e07f2c61d5994b2375bdba][789f0a3474e6]].
- Added support for =company-mode= and =company-box=. See [[https://github.com/mssola/soria/commit/390f03333e2e6083ee5d7f9b36c2e794105cf466][390f03333e2e]].
- Fixed Helm selection for GNU Emacs 27.x. See [[https://github.com/mssola/soria/commit/41520c0418a2a5468ac7696159a7dedb558187a7][41520c0418a2]].
- Added support for =org-drawer= and =org-special-keyword=. See [[https://github.com/mssola/soria/commit/8539cc132c92519b9053ed48d1bdecac6a64bdd5][8539cc132c92]].